# Dockfile-Coreseek

./: .gitignore  Dockerfile  README.md  entrypoint.sh  sources.list
coreseek/csft-4.1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  sphinx-min.conf.dist  sphinx.conf.dist  sphinx08.sln
coreseek/csft-4.1/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
coreseek/csft-4.1/config/: config.h  config.h.in  config.h.in~
coreseek/csft-4.1/doc/: Makefile  Makefile.in  sphinx.xml
coreseek/csft-4.1/libstemmer_c/: Makefile  Makefile.in
coreseek/csft-4.1/mysqlse/: ha_sphinx.h
coreseek/csft-4.1/src/: Makefile  Makefile.am  Makefile.in  indexer.cpp  indextool.cpp  py_helper.cpp  py_helper.h  py_layer.cpp  py_layer.h  py_source.cpp  py_source.h  search.cpp  searchd.cpp  sph_darts.h  sphinx.cpp  sphinx.h  sphinxrt.cpp  sphinxsort.cpp  sphinxstd.cpp  sphinxstd.h  sphinxutils.cpp  sphinxutils.h  sphinxversion.h
coreseek/csft-4.1/win/: indexer08.vcproj  indextool08.vcproj  libsphinx08.vcproj  search08.vcproj  searchd08.vcproj  spelldump08.vcproj  testrt08.vcproj  tests08.vcproj
coreseek/m4-1.4.13/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  bootstrap  c-boxes.el  cfg.mk  config.status  configure  configure.ac  maint.mk  stamp-h
coreseek/m4-1.4.13/checks/: 001.preprocess  002.debugging_  003.command_li  004.command_li  005.comments  006.comments  007.input_proc  008.input_proc  009.inhibiting  010.inhibiting  011.inhibiting  012.inhibiting  013.inhibiting  014.inhibiting  015.inhibiting  016.inhibiting  017.macro_argu  018.macro_argu  019.macro_argu  020.macro_argu  021.macro_argu  022.quoting_ar  023.macro_expa  024.macro_expa  025.define  026.define  027.define  028.arguments  029.arguments  030.arguments  031.arguments  032.arguments  033.arguments  034.pseudo_arg  035.pseudo_arg  036.pseudo_arg  037.pseudo_arg  038.pseudo_arg  039.pseudo_arg  040.pseudo_arg  (+195 more)
coreseek/m4-1.4.13/doc/: Makefile  Makefile.am  Makefile.in  m4.texinfo  stamp-vti
coreseek/m4-1.4.13/examples/: Makefile  Makefile.am  Makefile.in
coreseek/m4-1.4.13/lib/: Makefile  Makefile.am  Makefile.in  config.h  config.hin  configmake.h  fcntl.h  math.h  siglist.h  signal.h  stdio.h  stdlib.h  string.h  strsignal.c  unistd.h
coreseek/m4-1.4.13/lib/.deps/: asnprintf.Po  asprintf.Po  basename.Po  c-ctype.Po  c-stack.Po  clean-temp.Po  cloexec.Po  close-stream.Po  closein.Po  closeout.Po  dirname.Po  dup-safer.Po  execute.Po  exitfail.Po  fatal-signal.Po  fd-safer.Po  fflush.Po  filenamecat.Po  fopen-safer.Po  fpurge.Po  freadahead.Po  freading.Po  fseeko.Po  gl_avltree_oset.Po  gl_linkedhash_list.Po  gl_list.Po  gl_oset.Po  isnanl.Po  localcharset.Po  malloca.Po  memchr2.Po  mkstemp-safer.Po  pipe-safer.Po  pipe.Po  printf-args.Po  printf-frexp.Po  printf-frexpl.Po  printf-parse.Po  progname.Po  quotearg.Po  (+18 more)
coreseek/m4-1.4.13/lib/glthread/.deps/: lock.Po  threadlib.Po  tls.Po
coreseek/m4-1.4.13/lib/sys/: stat.h  wait.h
coreseek/m4-1.4.13/m4/: gnulib-cache.m4  gnulib-comp.m4
coreseek/m4-1.4.13/src/: Makefile  Makefile.am  Makefile.in  builtin.c  debug.c  eval.c  format.c  freeze.c  input.c  m4  m4.c  m4.h  macro.c  output.c  path.c  symtab.c
coreseek/m4-1.4.13/src/.deps/: builtin.Po  debug.Po  eval.Po  format.Po  freeze.Po  input.Po  m4.Po  macro.Po  output.Po  path.Po  symtab.Po
coreseek/m4-1.4.13/tests/: Makefile  Makefile.am  Makefile.in  test-isnand-nolibm.c  test-isnanf-nolibm.c
coreseek/mmseg-3.2.14/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
coreseek/mmseg-3.2.14/.hg/: branchheads.cache  dirstate  last-message.txt  tags.cache
coreseek/mmseg-3.2.14/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
coreseek/mmseg-3.2.14/src/: Makefile  Makefile.in  SegmentPkg.lo  SegmenterManager.lo  StringTokenizer.lo  SynonymsDict.lo  ThesaurusDict.lo  UnigramCorpusReader.lo  UnigramDict.lo  UnigramRecord.lo  Utf8_16.lo  assert.lo  bsd_getopt.lo  csr_mmap.lo  csr_utils.lo  dictionary.lo  iniparser.lo  libmmseg.la  mmseg  mmthunk.lo  segmenter.lo
coreseek/testpack/.hg/: branchheads.cache  dirstate  last-message.txt  tags.cache  undo.dirstate
coreseek/testpack/api/: test_coreseek.php  test_coreseek_rtindex.php
coreseek/testpack/etc/: csft.conf  csft_cjk.conf  csft_demo_python.conf  csft_demo_python_pymssql.conf  (+3 more)
cron/: sphinx
sphinx/: sphinx.conf.dist
(+191 files in other folders)
